# GrantsInvestments

./: .env  .gitignore  daily_uploader_grants.py  dataset_gen.py  requirements.txt  test_bert.py  train_bert.py
backend/: main.py
frontend/: grants_app.py
rust_etl_pipeline/: Cargo.toml
rust_etl_pipeline/src/: main.rs
