[package]
name = "rust_etl_pipeline"
version = "0.1.0"
edition = "2024"

description = "A fast and reliable ETL pipeline built in Rust for processing structured data."
license = "MIT"
authors = ["Ali Sher alisher213@outlook.com"]
repository = "https://github.com/Sher213/GrantInvestments"
documentation = "https://docs.rs/my_etl_pipeline"
readme = "README.md"
keywords = ["ETL", "Rust", "data-pipeline", "csv", "postgres"]
categories = ["data-processing", "command-line-utilities"]


[dependencies]
csv = "1.2"              # For reading/writing CSV files
serde = { version = "1.0", features = ["derive"] }  # For data serialization
reqwest = { version = "0.11", features = ["blocking", "json"] }  # For HTTP requests
tokio = { version = "1", features = ["full"] }      # For async tasks
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }  # For DB access

