[package]
name = "rust_etl_pipeline"
version = "0.1.0"
edition = "2024"

description = "A fast and reliable ETL pipeline built in Rust for processing structured data."
license = "MIT"
authors = ["Ali Sher alisher213@outlook.com"]
repository = "https://github.com/Sher213/GrantInvestments"
documentation = "https://docs.rs/my_etl_pipeline"
readme = "README.md"
keywords = ["ETL", "Rust", "data-pipeline", "csv", "postgres"]
categories = ["data-processing", "command-line-utilities"]

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "gzip", "native-tls"] }
scraper = "0.14"
tokio   = { version = "1", features = ["full"] }
csv     = "1.1"
chrono  = "0.4"
